# hooper-airflow

./: .env  .env.exemple  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: airflow.cfg
dags/: dag_weather.py
pipelines/powerbi/: utils.py
pipelines/weather/: pipe_weather.py
